--- a/UI/vite-project/package.json
+++ b/UI/vite-project/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
+    "rollup": "^4.22.4",
     "svelte": "^4.2.18",
     "vite": "^5.4.1"
   }
